8/10: Fix Contrast Ratio of Buttons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,6 +86,7 @@ label {
 }
 html,
 body {
+  font-family: sans-serif;
   min-height: 100%;
 }
 
@@ -218,19 +219,20 @@ a[type='button'] {
   background-color: var(--background-button);
   border: 0.05em solid var(--background-button);
   border-radius: 0.5em;
-  color: var(--color-link-active);
+  color: var(--color-black);
   cursor: pointer;
   display: inline-block;
   font-family: var(--font-sans-serif);
   font-size: var(--step-0);
   font-weight: 600;
-  width: fit-content;
   height: fit-content;
   padding: 0 0.5em;
   text-align: center;
   text-decoration: none;
   -webkit-appearance: none;
 }
+
+button { width: fit-content;}
 button:hover,
 a[type='button']:hover,
 .modal > section > footer > button:last-child:hover {
@@ -320,7 +322,6 @@ nav a {
   text-align: center;
   text-decoration: none;
   text-size-adjust: 100%;
-  width: fit-content;
 }
 nav a:link,
 nav a:visited {
